--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -438,7 +438,7 @@
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Manipuladores que adquirieron el Código de la [P]ersuación:
+   Manipuladores que adquiriram o Código da [P]ersuasão:
   </h2>
 
   <!-- Contenedor con scroll y drag -->
