--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -282,25 +282,46 @@
 </section>
 
 <style>
-  #blood-line {
-    height: 0;
-    background: linear-gradient(to bottom, #b71c1c 0%, #ff0000 40%, #700000 100%);
-    box-shadow: 0 0 25px rgba(255,0,0,0.6);
-    position: absolute;
-    border-radius: 999px;
-  }
-  #blood-line::after {
-    content: '';
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    background: radial-gradient(circle, #ff0000 0%, #8b0000 80%);
-    border-radius: 50%;
-    box-shadow: 0 0 20px rgba(255,0,0,0.6);
-  }
+#blood-line {
+  height: 0;
+  background: #b71e1e; 
+  box-shadow: none; 
+  position: absolute;
+  border-radius: 999px;
+}
+
+#blood-line::after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 20px;
+  background: #b71e1e; 
+  border-radius: 50%;
+  box-shadow: none; 
+  z-index: 2;
+}
+
+
+#blood-line::before {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 9px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 90px solid #b71e1e;
+  opacity: 1;
+  filter: none; 
+  z-index: 1;
+}
+
+
 </style>
 <script>
   const bloodLine = document.getElementById("blood-line");
