--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -282,6 +282,9 @@
 </section>
 
 <style>
+    .fade-text {
+text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
+}
 #blood-line {
   height: 0;
   background: #b71e1e; 
