--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -789,9 +789,9 @@ function hideThermometer() {
 }
 
 </script>
-<!-- 🎵 Áudio de fundo -->
+<!-- 🎵 Áudio de fundo IMPORTANTE! -->
 <audio id="bgMusic" loop>
-  <source src="https://cdn.pixabay.com/download/audio/2024/05/21/audio_852c1196bc.mp3?filename=suspense-e-investigacao-hipervigilrpg-211156.mp3" type="audio/mpeg">
+  <source src="https://cdn.pixabay.com/download/audio/2024/12/23/audio_a6afcd20f6.mp3?filename=chromatic-dark-ambient-279768.mp3" type="audio/mpeg">
   Seu navegador não suporta áudio.
 </audio>
 
