--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -142,10 +142,10 @@
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
         Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
       </p><br>
-<a href="#preco" 
+<!--<a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
    🔒 DESBLOQUEAR CÓDIGO
-</a>
+</a>-->
 
 <p class="mt-4 text-sm text-gray-400">
   *Haz clic solo si tienes el valor de empezar.
