--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -139,9 +139,25 @@
           Oscuro de la [P]ersuación
         </span>
       </h1>
-     <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-  Descubre cómo convertir las palabras en <b class="text-red-500">armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
-</p><br>
+      <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
+        Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
+      </p><br>
+
+      <!-- Setinha animada -->
+      <div class="flex justify-center lg:justify-start">
+        <div class="animate-bounce text-red-500 text-4xl drop-shadow-[0_0_8px_#ff0000]">
+          ↓
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
 <!--<a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
    🔒 DESBLOQUEAR CÓDIGO
