--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -143,9 +143,10 @@
         Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
       </p><br>
 
+
       <!-- Setinha animada -->
-      <div class="flex justify-center lg:justify-start">
-        <div class="animate-bounce text-red-500 text-4xl drop-shadow-[0_0_8px_#ff0000]">
+      <div class="flex justify-center lg:justify-start mt-1">
+        <div class="animate-bounce text-red-500 text-3xl drop-shadow-[0_0_6px_#ff0000] leading-none">
           ↓
         </div>
       </div>
