--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -135,17 +135,17 @@
 
 <!-- Animação personalizada -->
 <style>
-@keyframes zoomInOut {
+@keyframes zoomInOutSutil {
   0%, 100% {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.08);
+    transform: scale(1.03);
   }
 }
 
-.animate-zoom {
-  animation: zoomInOut 4s ease-in-out infinite;
+.animate-zoom-sutil {
+  animation: zoomInOutSutil 6s ease-in-out infinite;
 }
 </style>
 
