animate-zoom-sutil

--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -129,7 +129,7 @@
 <div class="flex justify-center lg:order-2">
   <img 
     src="https://i.imgur.com/rE9pIj5.png" 
-    class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom"
+    class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
   />
 </div>
 
