--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -426,33 +426,34 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </h3>
 
     <!-- Lista de beneficios -->
-    <ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base">
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span><strong class="text-white">Código Completo de Persuasión</strong></span>
-      </li>
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span>Versión en <strong>audiolibro</strong> completa</span>
-      </li>
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span><strong>Manual de manipulación</strong> de personas</span>
-      </li>
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span><strong>Libros Prohibidos</strong> para generar riqueza</span>
-      </li>
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span>Contenido exclusivo de grandes mentorías</span>
-      </li>
-      <li class="flex items-start gap-2">
-        <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span>Acceso <strong>vitalicio</strong> al área de miembros</span>
-      </li>
-    </ul>
-
+<ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base">
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span><strong class="text-white">Código Completo de Persuasión</strong></span>
+  </li>
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span>Versión en <strong>audiolibro</strong> completa</span>
+  </li>
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span><strong>Manual de Comunicación de Alto Impacto</strong></span>
+  </li>
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span><strong>Libros Prohibidos</strong> para generar riqueza</span>
+  </li>
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span>Contenido exclusivo de grandes mentorías</span>
+  </li>
+  <li class="flex items-start gap-2">
+    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+    <span>Acceso <strong>vitalicio</strong> al área de miembros</span>
+  </li>
+</ul>
+    
+  
     <!-- Preço -->
     <div class="text-center mb-4">
       <p class="text-base mb-2 text-gray-200">
