--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -495,7 +495,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Manipuladores que adquirieron el Código de la [P]ersuación:
+    Mentes que ya dominan la [P]ersuasión
   </h2>
 
   <!-- Contenedor con scroll y drag -->
