--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -171,22 +171,16 @@
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-<!--<a href="#preco" 
+<a href="#oque" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
    🔒 DESBLOQUEAR CÓDIGO
 </a>
 
 <p class="mt-4 text-sm text-gray-400">
   *Haz clic solo si tienes el valor de empezar.
-</p>-->
+</p>
+
+
     </div>
 
   </div>
@@ -196,7 +190,7 @@
 
 
 <!-- SEÇÃO 2: PARA QUEM É -->
-<section class="px-6 pt-0 pb-12 bg-black text-center">
+<section id="oque" class="px-6 pt-0 pb-12 bg-black text-center">
  
 
 <!-- Imagem translucida com fade-in -->
