--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -162,15 +162,6 @@
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
         Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
       </p><br>
-
-
-      <!-- Setinha animada -->
-<div class="flex justify-center lg:justify-start mt-0">
-  <div class="animate-bounce text-red-500 text-3xl drop-shadow-[0_0_6px_#ff0000] leading-none">
-    ↓
-  </div>
-</div>
-
 <a href="#oque" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
    🔒 DESBLOQUEAR CÓDIGO
@@ -184,7 +175,7 @@
     </div>
 
   </div>
-</section><br><br><br><br>
+</section><br><br><br><br><br>
 
 
 
@@ -280,6 +271,16 @@
 
 
 
+      <!-- Setinha animada -->
+<div class="flex justify-center lg:justify-start mt-0">
+  <div class="animate-bounce text-red-500 text-3xl drop-shadow-[0_0_6px_#ff0000] leading-none">
+    ↓
+  </div>
+</div>
+
+
+
+<br><br><br>
 
 
 
@@ -393,7 +394,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
-
+<br><br><br>
 
 
 <!-- CARD DE PREÇO -->
@@ -484,7 +485,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
-<br><br>
+<br><br><br>
 
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
@@ -758,7 +759,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
-
+<br>
 
 
 
@@ -792,6 +793,9 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
+<br>
+<br>
+
 <!-- FOOTER -->
 <footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
   
@@ -811,6 +815,10 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </script>
 
 
+
+<br>
+<br>
+<br>
 
 <!-- Notificações (canto inferior esquerdo) -->
 <div id="toasts" class="fixed bottom-4 left-4 z-[10000] space-y-3 pointer-events-none"></div>
