--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -58,6 +58,18 @@
       100% { transform: scale(1);   box-shadow: 0 0 10px rgba(34,197,94,0.7), 0 0 20px rgba(34,197,94,0.5); }
     }
   </style>
+
+
+
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "tmugztuwhn");
+</script>
+
+
 </head>
 
 <body class="bg-black text-white font-sans">
