ACEPTAR EL DESAFÍO

--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -451,7 +451,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       Tu navegador no soporta audio.
     </audio>
 
-    <button id="startBtn" onclick="startQuiz()" style="display: none;">ASUMIR LOS RIESGOS</button>
+    <button id="startBtn" onclick="startQuiz()" style="display: none;">ACEPTAR EL DESAFÍO</button>
 
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
