<p class="btn-caption mt-4 text-sm text-gray-400">

--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -179,10 +179,18 @@
    🔒 DESBLOQUEAR CÓDIGO
 </a>
 
-<p class="mt-4 text-sm text-gray-400">
+<p class="btn-caption mt-4 text-sm text-gray-400">
   *Haz clic solo si tienes el valor de empezar.
 </p>
-
+<style>
+@media (min-width: 1024px) {
+  .btn-caption {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+}
+</style>
 
     </div>
 
