--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -667,7 +667,7 @@ title: (() => {
   const diaSemana = dias[hoje.getDay()];
   const dia = hoje.getDate().toString().padStart(2, '0');
   const mes = hoje.toLocaleString('es-ES', { month: 'long' });
-  return `70% de descuento en el Código de la [P]ersuasión, válida solo este ${diaSemana} ${dia} de ${mes}.`;
+  return `70% OFF, válida solo este ${diaSemana} ${dia} de ${mes}.`;
 })(),
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
   buttons: [
