--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -292,8 +292,8 @@
 
 
       <!-- Setinha animada -->
-<div class="flex justify-center lg:justify-start mt-0">
-  <div class="animate-bounce text-red-500 text-3xl drop-shadow-[0_0_6px_#ff0000] leading-none">
+<div class="flex justify-center mt-0">
+  <div class="animate-bounce text-red-500 text-3xl drop-shadow-[0_0_6px_#ff0000] leading-none text-center">
     ↓
   </div>
 </div>
@@ -793,7 +793,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
     <p style="font-size:14px; color:#333; line-height:1.5; max-width:420px; margin:0 auto;">
       Sé que vives con un poco de miedo, así que decidí garantizar este material por 30 días.<br><br>
       Si no cumple con tus expectativas, te devolveremos esa pequeña cantidad que pagaste, sin hacer preguntas.<br><br>
-      Solo envía un correo electrónico al soporte <b>contato@codigo-persuasao.com.br</b>
+      Solo envía un correo electrónico al soporte <b>contato@codpersuasion.com</b>
     </p>
   </div>
 </section>
