--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -179,7 +179,7 @@
    🔒 DESBLOQUEAR CÓDIGO
 </a>
 
-<p class="btn-caption mt-4 text-sm text-gray-400">
+<p class="mt-4 text-sm text-gray-400 text-center lg:text-center">
   *Haz clic solo si tienes el valor de empezar.
 </p>
 <style>
