--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -178,7 +178,7 @@
   🔒 DESBLOQUEAR CÓDIGO 
 </a> 
 
-    <p class="text-sm text-gray-400" style="margin-top: 10px;">
+<p class="mt-4 text-sm text-gray-400 text-center w-full">
   *Haz clic solo si tienes el valor de empezar.
 </p>
 
