--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -174,13 +174,14 @@
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
         Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
       </p><br>
-<a href="#oque" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante"> 
-  🔒 DESBLOQUEAR CÓDIGO 
-</a> 
-
-<p class="mt-4 text-sm text-gray-400 text-center w-full">
-  *Haz clic solo si tienes el valor de empezar.
-</p>
+<div style="display: inline-block; text-align: center;">
+  <a href="#oque" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante"> 
+    🔒 DESBLOQUEAR CÓDIGO 
+  </a>
+  <p class="text-sm text-gray-400" style="margin-top: 10px;">
+    *Haz clic solo si tienes el valor de empezar.
+  </p>
+</div>
 
 <style>
 @media (min-width: 1024px) {
