--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -453,15 +453,15 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span><strong>Manual de Comunicación de Alto Impacto</strong></span>
+    <span><strong>BONO:</strong> Manual de Comunicación de Alto Impacto</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span><strong>Libros Prohibidos</strong> para generar riqueza</span>
+    <span><strong>BONO:</strong>Libros Prohibidos para generar riqueza</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span>Contenido exclusivo de grandes mentorías</span>
+    <span><strong>BONO:</strong>Contenido exclusivo de grandes mentorías</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
