--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -444,12 +444,18 @@ document.getElementById("beginPortal").addEventListener("click", () => {
     <div id="volumeHint">🔊 Sube el volumen</div>
   </div>
 </div>
+
     <audio id="introAudio" autoplay muted onended="showStartButton()"> <!-- 🎧 Áudio 1 - IMPORTANTE! -->
       <source src="https://static.wixstatic.com/mp3/7f5efc_9843fe2910e34fd28334d2a07ec9c6e4.mp3" type="audio/mpeg"> 
       Tu navegador no soporta audio.
     </audio>
 
-    <button id="startBtn" onclick="startQuiz()" style="display: none;">ACEPTAR EL DESAFÍO</button> <!--Botão 01 - IMPORTANTE!-->
+
+
+<p id="introLabel" class="text-center text-sm font-semibold text-gray-300 mt-2 mb-1 tracking-wide uppercase">
+  Demuestra tu inteligencia
+</p>
+<button id="startBtn" onclick="startQuiz()" style="display: none;">DESBLOQUEA AL MANUAL SECRETO</button><!--Botão 01 - IMPORTANTE!-->
 
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
