--- a/oraculo-es3/index.html
+++ b/oraculo-es3/index.html
@@ -472,38 +472,38 @@ document.getElementById("beginPortal").addEventListener("click", () => {
   </div>
 
   <script>
-    const questions = [
+  const questions = [
 {
-  text: "¡Vamos allá! Empieza el juego...",
-  options: ["Escasez", "Prueba Social", "Autoridad"],
+  text: "Veamos si reconoces la manipulación más obvia…",
+  options: ["Anclaje", "Misterio", "Autoridad"],
   correct: 2,
   audio: "https://static.wixstatic.com/mp3/7f5efc_1839db906af140d3b48f652e152fd9b4.mp3",  // 🎧 Audio 2
   gif: "https://static.wixstatic.com/media/7f5efc_8e1f897492c6474d880adf2ad3182ac5~mv2.gif"
 },
 {
-  text: "¡Un niño de 5 años lo sabe!",
-  options: ["Urgencia", "Escasez", "Reciprocidad"],
+  text: "Si fallas esta… es mejor que te rindas ahora.",
+  options: ["Identidad", "Escasez", "Reciprocidad"],
   correct: 1,
   audio: "https://static.wixstatic.com/mp3/7f5efc_91a7155bbe9345c1ae9c35be45dc3ff0.mp3",   // 🎧 Audio 3
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif"
 },
 {
-  text: "Ni siquiera lo llamaría amigo...",
-  options: ["Reciprocidad", "Autoridad", "Miedo"],
+  text: "¿De verdad sabes lo que te están cobrando?",
+  options: ["Reciprocidad", "Ambición", "Confianza"],
   correct: 0,
   audio: "https://static.wixstatic.com/mp3/7f5efc_c7cb429f1b7843039c250d9c0fd0ac96.mp3",   // 🎧 Audio 4
   gif: "https://static.wixstatic.com/media/7f5efc_65ecff36c016466f86572c9701297323~mv2.gif"
 },
 {
-  text: "Demuestra que lo sabes...",
-  options: ["Miedo a perder", "Negociación", "Recompensa"],
+  text: "Te atraparon por emociones… ¿puedes nombrarlo?",
+  options: ["Dependencia", "Miedo", "Recompensa"],
   correct: 2,
   audio: "https://static.wixstatic.com/mp3/7f5efc_cf00803275fe4b8496b2a79d21f4876c.mp3",   // 🎧 Audio 5
   gif: "https://static.wixstatic.com/media/7f5efc_356fcdf2e88344ea95e2f7d8e218c018~mv2.gif"
 },
 {
-  text: "Te atrapé, ¿verdad?",
-  options: ["Anticipación", "Autonomía", "Chantaje"],
+  text: "Todo esto fue una trampa… ¿descubriste el gatillo oculto?",
+  options: ["Amenaza", "Autonomía", "Control"],
   correct: 1,
   audio: "https://static.wixstatic.com/mp3/7f5efc_50c6a4905a0142ada95a2cece91b9639.mp3",   // 🎧 Audio 6
   gif: "https://static.wixstatic.com/media/7f5efc_8e1f897492c6474d880adf2ad3182ac5~mv2.gif"
