--- a/oraculo-es3/index.html
+++ b/oraculo-es3/index.html
@@ -661,8 +661,9 @@ title: (() => {
   return `$ 50 OFF, válida solo este ${diaSemana} ${dia} de ${mes}.`;
 })(),
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
-  buttons: [
-    { text: "¡ASEGURAR AHORA!", action: "link", link: "/lp-2-es/" } 
+    buttons: [
+    { text: "¡ASEGURAR AHORA!", action: "link", link: "/lp-2-es/" },
+    { text: "Me comprometo.", action: "link", link: "/lp-2-es/" }
   ]
 }
   
