--- a/oraculo-es2/index.html
+++ b/oraculo-es2/index.html
@@ -458,7 +458,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
     Demuestra tu inteligencia
   </div>
   <button id="startBtn" onclick="startQuiz()">DESBLOQUEA LO QUE TE HAN OCULTADO</button><!--Botão 01 - IMPORTANTE!-->
-
+</div>
   
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
