--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -449,7 +449,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span>Versión en <strong>audiolibro</strong> completa</span>
+    <span>Versión en <strong>Audiolibro</strong> Completa</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
@@ -465,7 +465,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span>Acceso <strong>vitalicio</strong> al área de miembros</span>
+    <span>Acceso <strong>Vitalicio</strong> al Área de Miembros</span>
   </li>
 </ul>
     
@@ -482,7 +482,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </span>
 </div>
 
-      <div class="mt-1 text-gray-200 text-base">*Solo por hoy 70% OFF</div>
+      <div class="mt-1 text-gray-200 text-base">*Solo por hoy $50 OFF</div>
     </div><br>
 
     <!-- Botão CTA -->
