--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -162,13 +162,14 @@
 </style>
 
 
-
  <!-- Texto -->
     <div class="text-center lg:text-left lg:order-1">
       <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
-        <span class="text-white">El Secreto Más </span><br>
+        <span class="text-white">
+          El Secreto que los Rics 
+        </span><br>
         <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-          Oscuro de la [P]ersuación
+          Usan para Ganar Más Dinero
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
