--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -173,7 +173,7 @@
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-        Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el dinero</b>.
+        Descubre cómo convertir las palabras en <b>armas de influencia para dominar los negocios, las relaciones y el DINERO</b>.
       </p><br>
 <div style="display: inline-block; text-align: center;">
   <a href="#oque" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante"> 
