--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -166,7 +166,7 @@
     <div class="text-center lg:text-left lg:order-1">
       <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
         <span class="text-white">
-          El Secreto que los Rics 
+          El Secreto que los Ricos 
         </span><br>
         <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
           Usan para Ganar Más Dinero
