--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -136,11 +136,11 @@
  <br><br>
 <section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
-
-    <!-- Imagem HERO -->
+ 
+    <!-- Imagem HERO --> <!--  mão na boca: https://i.imgur.com/rE9pIj5.png --> 
 <div class="flex justify-center lg:order-2">
   <img 
-    src="https://i.imgur.com/rE9pIj5.png" 
+    src="https://i.imgur.com/0lYJNhC.png"      
     class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
   />
 </div>
