--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -76,9 +76,7 @@
 
 <!-- Franja Roja con Cronómetro -->
 <div class="aviso-topo" id="aviso-topo">
-  ⚠️ <b>ATENCIÓN:</b> Esta página se cerrará pronto...<br>
-  Apresúrate, mientras aún hay tiempo:  
-  <span id="countdown" style="margin-left:10px; font-weight:bold;"></span>
+  ⚠️ <b>ATENCIÓN:</b> Esta página se cerrará en:<span id="countdown" style="margin-left:10px; font-weight:bold;"></span>
 </div>
 
 <script>
