--- a/oraculo-es3/index.html
+++ b/oraculo-es3/index.html
@@ -412,19 +412,21 @@ document.getElementById("beginPortal").addEventListener("click", () => {
   // Fecha o aviso inicial
   document.getElementById("startOverlay").style.display = "none";
 
-  // <!-- Pixel ao iniciar o quiz IMPORTANTE!-->
+  // Pixel de evento  IMPORTANTE!
   if (typeof fbq === "function") {
     fbq('track', 'Lead');
     console.log("🔥 Evento Lead disparado!");
   }
 
-  // Inicia o áudio principal do quiz
+  // Inicia o áudio principal SOMENTE agora
   const intro = document.getElementById("introAudio");
+  intro.currentTime = 0; // garante que comece do início
   intro.muted = false;
   intro.play();
 
-  // 🎵 Inicia música de fundo com volume 50% <!-- IMPORTANTE!-->
+  // Música de fundo
   const bgMusic = document.getElementById("bgMusic");
+  bgMusic.currentTime = 0;
   bgMusic.volume = 0.5;
   bgMusic.play().catch(err => console.log("Autoplay bloqueado até interação:", err));
 });
@@ -445,10 +447,10 @@ document.getElementById("beginPortal").addEventListener("click", () => {
   </div>
 </div>
 
-    <audio id="introAudio" autoplay muted onended="showStartButton()"> <!-- 🎧 Áudio 1 - IMPORTANTE! -->
-      <source src="https://static.wixstatic.com/mp3/7f5efc_5c41a7b9e6084e2cb371875758deef2d.mp3" type="audio/mpeg"> 
-      Tu navegador no soporta audio.
-    </audio>
+<audio id="introAudio" onended="showStartButton()"> <!-- 🎧 Áudio 1 - IMPORTANTE! -->
+  <source src="https://static.wixstatic.com/mp3/7f5efc_9843fe2910e34fd28334d2a07ec9c6e4.mp3" type="audio/mpeg"> 
+  Tu navegador no soporta audio.
+</audio>
 
 
 
