--- a/oraculo-es1/index.html
+++ b/oraculo-es1/index.html
@@ -412,19 +412,21 @@ document.getElementById("beginPortal").addEventListener("click", () => {
   // Fecha o aviso inicial
   document.getElementById("startOverlay").style.display = "none";
 
-  // <!-- Pixel ao iniciar o quiz IMPORTANTE!-->
+  // Pixel de evento  IMPORTANTE!
   if (typeof fbq === "function") {
     fbq('track', 'Lead');
     console.log("🔥 Evento Lead disparado!");
   }
 
-  // Inicia o áudio principal do quiz
+  // Inicia o áudio principal SOMENTE agora
   const intro = document.getElementById("introAudio");
+  intro.currentTime = 0; // garante que comece do início
   intro.muted = false;
   intro.play();
 
-  // 🎵 Inicia música de fundo com volume 50% <!-- IMPORTANTE!-->
+  // Música de fundo
   const bgMusic = document.getElementById("bgMusic");
+  bgMusic.currentTime = 0;
   bgMusic.volume = 0.5;
   bgMusic.play().catch(err => console.log("Autoplay bloqueado até interação:", err));
 });
